--- a/web_client/scss/cards.scss
+++ b/web_client/scss/cards.scss
@@ -35,6 +35,7 @@ card {
   width: 150px;
   height: 210px;
   padding: 5px;
+  position: absolute;
   text-align: center;
   background-color: #fff;
   margin: 5px;
