--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -21,5 +21,5 @@ $deck-left: 0;
     width: 1395px;
     white-space: nowrap;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: visible;
 }
