--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -121,3 +121,61 @@ $deck-left: 0;
 .hidden{
     display: none;
 }
+
+#startTime{
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+}
+
+#timer{
+    font-family: Consolas;
+    color: #fff;
+}
+
+.darken{
+    filter: brightness(70%) blur(5px);
+}
+
+#stf_{
+    &card1{
+        top: 100px;
+        left: 25vw;
+        z-index: 302;
+    }
+
+    &card2{
+        top: 75px;
+        left: 35vw;
+        z-index: 301;
+    }
+
+    &card3{
+        top: 50px;
+        left: 45vw;
+        z-index: 300;
+    }
+
+    &ok {
+        position: relative;
+        border: 3px solid #29c031;
+        box-shadow: 0 5px 0 0px #209b20;
+        background: #3fce2c;
+        color: #fff;
+        padding: 10px 30px;
+        font-size: 25px;
+        border-radius: 10px;
+        display: block;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        top: -25px;
+        outline: none;
+    }
+    
+    &ok:active {
+        box-shadow: 0 2px 0 0px #349b20;
+        margin-top: 23px;
+    }
+}
