--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -13,7 +13,7 @@ $deck-left: 0;
     }
 }
 
-.hand{
+#hand{
     position: absolute;
     bottom: 0;
     padding-bottom: 20px;
@@ -104,14 +104,17 @@ $deck-left: 0;
     }
 }
 
-#scrollRect {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+.scrollRect {
+    position: relative;
     height: 10px;
     //max-width: 25vw;
     width: 25000px;
     background: #ffffff50;
+    &#hand_scroll{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 }
 
 .vis_hidden{
