--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -125,17 +125,7 @@ $deck-left: 0;
     display: none;
 }
 
-#startTime{
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 30px;
-}
 
-#timer{
-    font-family: Consolas;
-    color: #fff;
-}
 
 .darken{
     filter: brightness(70%) blur(5px);
@@ -239,4 +229,32 @@ $deck-left: 0;
     background: #14141469;
     border-radius: 1.5px;
     left: 176px - 4px/2;
+}
+
+@import "game/siderbar.scss";
+
+#people_{
+    &modal{
+        width: 100vw;
+        height: 100vh;
+        z-index: 300;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        &*{
+            z-index: 300;
+        }
+        &_content {
+            background: white;
+            color: black;
+            width: calc(40vw - 10px*2);
+            padding: 7px;
+            height: calc(80vh - 10px*2);
+            border: 3px solid black;
+            border-radius: 10px;
+            margin: auto;
+            margin-top: (100vh - 80vh)/2;
+        }
+    }
 }
