Fix player being able to put card in other turns

--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -11,6 +11,10 @@ $deck-left: 0;
     :nth-child(2){
         top: 5px;
     }
+
+    &[disabled=true]{
+      filter: brightness(70%);
+    }
 }
 
 #hand{
