--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -75,6 +75,17 @@ $deck-left: 0;
     overflow: visible;
     z-index: 0;
     padding: 0;
+    
+    &.highlight {
+        &::after {
+            content: "";
+            display: inline-block;
+            border: 3px dashed #0a0;
+            width: 170px;
+            height: 230px;
+            padding: 0;
+        }
+    }
 }
 
 #putMultiple{
