Fix see the future and add card combo processing

--- a/web_client/scss/cards.scss
+++ b/web_client/scss/cards.scss
@@ -46,6 +46,11 @@ card {
     filter: brightness(70%);
   }
 
+  &.selected{
+    // border: 3px #0a0 solid;
+    filter: brightness(130%) contrast(70%);
+  }
+
   &.relative{
     position: relative;
   }
