Implement five card combo

--- a/web_client/scss/game.scss
+++ b/web_client/scss/game.scss
@@ -199,7 +199,7 @@ $deck-left: 0;
     }
 }
 
-#defused_, #twocat_, #threecat_{
+#defused_, #twocat_, #threecat_, #fivecat_{
     &modal{
         width: 100vw;
         height: 100vh;
